# OpenVegasPro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE.txt  OpenVegasPro.cpp  OpenVegasPro.csproj  OpenVegasPro.h  OpenVegasPro.sln  Program.cs  README.md  test_path  test_path.rs
src/: MediaClip.cpp  MediaClip.h  MediaSource.cpp  MediaSource.h  OpenVegasPro.cpp  OpenVegasPro.h  RenderedFrame.cpp  RenderedFrame.h  Timeline.h  VideoPlayer.cpp  VideoPlayer.h  VideoPreview.cpp  VideoPreview.h  engine.rs  enums.h  keybindings.rs  main.cpp  main.rs  media.rs  media_clip.cpp  media_clip.h  media_source.cpp  media_source.h  rendered_frame.cpp  theme.rs  timeline.rs  utils.cpp  utils.h  video_player.cpp  video_player.h  video_preview.cpp  video_preview.h
src/UserInterface/: UserInterface.cpp  UserInterface.h
src/toolbar/: button.rs  icons.rs  mod.rs
src/user_interface/: user_interface.cpp  user_interface.h
